--- a/src/style/style.css
+++ b/src/style/style.css
@@ -158,6 +158,10 @@ header {
     border-radius: 4px;
 }
 
+#adminDashBtn {
+    padding: 8px 45px;
+}
+
 .btn-blue {
     background-color: #112266;
 }
