--- a/src/style/style.css
+++ b/src/style/style.css
@@ -179,6 +179,8 @@ header {
     border-radius: 50%;
     width: 30px;
     height: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 /* Login Form */
