--- a/src/templates/admin/home.html
+++ b/src/templates/admin/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Home</title>
-    <link rel="stylesheet" href="../../style/style.css">
-    <script src="../../scripts/adminScript.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='adminScript.js') }}"></script>
 </head>
 <body>
     <header>
