--- a/src/templates/admin/trackingRequests.html
+++ b/src/templates/admin/trackingRequests.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Status</title>
-    <link rel="stylesheet" href="../../style/style.css">
-    <script src="../../scripts/script.js" async></script>
+    <title>Requests</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
     <header>
         <span class="icon" onclick="navigateTo('../admin/home.html')">&#8962;</span>
-        <span class="header-title">Status</span>
+        <span class="header-title">Requests</span>
         <div class="search-container" style="width: 500px;">
             <span style="font-weight: bold;">Search...</span>
             <input type="text">
@@ -42,7 +42,7 @@
             </div>
             <div style="display: flex; gap: 8px; align-items: center;">
                 <button class="btn btn-red">X</button>
-                <div class="status-arrow st-approved">Approved</div>
+                <div class="status-arrow st-review">Review</div>
             </div>
         </div>
 
@@ -56,31 +56,7 @@
             </div>
             <div style="display: flex; gap: 8px; align-items: center;">
                 <button class="btn btn-red">X</button>
-                <div class="status-arrow st-review">Under Review</div>
-            </div>
-        </div>
-        <div class="list-item">
-            <div class="index">3.</div>
-            <div class="front-page-placeholder">FRONT PAGE</div>
-            <div class="item-details">
-                <h3>Test Title 3</h3>
-                <p>Author: Harvind</p>
-                <p>2026, Type</p>
-            </div>
-            <div style="display: flex; gap: 8px; align-items: center;">
-                <div class="status-arrow st-removed">Removed</div>
-            </div>
-        </div>
-        <div class="list-item">
-            <div class="index">4.</div>
-            <div class="front-page-placeholder">FRONT PAGE</div>
-            <div class="item-details">
-                <h3>Test Title 4</h3>
-                <p>Author: Harvind</p>
-                <p>2026, Type</p>
-            </div>
-            <div style="display: flex; gap: 8px; align-items: center;">
-                <div class="status-arrow st-rejected">Rejected</div>
+                <div class="status-arrow st-review">Review</div>
             </div>
         </div>
     </div>
