--- a/src/templates/admin/userManagement.html
+++ b/src/templates/admin/userManagement.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>User Management</title>
-        <link rel="stylesheet" href="../../style/style.css">
-        <script src="../../scripts/script.js" async></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <script src="{{ url_for('static', filename='script.js') }}"></script>
     </head>
     <body>
         <header>
