--- a/src/templates/admin/viewPublications.html
+++ b/src/templates/admin/viewPublications.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../style/style.css">
+    <title>Search</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
-        <div class="search-container">
-            <input type="text" placeholder="Search" value="Science">
+        <span class="icon" onclick="navigateTo('../admin/home.html')">&#8962;</span>
+        <div class="search-container" style="width: 500px;">
+            <span style="font-weight: bold;">Search...</span>
+            <input type="text">
             <span>&#128269;</span>
         </div>
         <span class="icon">&#128100;</span>
@@ -36,7 +39,7 @@
                 <p>Author: Sanjeevan</p>
                 <p>2026, Type</p>
             </div>
-            <div class="icon-bookmark" title="Save this item"></div>
+            <div class="status-arrow st-rejected">Remove</div>
         </div>
 
         <div class="list-item">
@@ -47,10 +50,8 @@
                 <p>Author: Harvind</p>
                 <p>2026, Type</p>
             </div>
-            <div class="icon-bookmark" title="Save this item"></div>
+            <div class="status-arrow st-rejected">Remove</div>
         </div>
     </div>
-    
-    <script src="../../scripts/script.js"></script>
 </body>
 </html>
