--- a/src/templates/mainScreens/publicationresults.html
+++ b/src/templates/mainScreens/publicationresults.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Requests</title>
-    <link rel="stylesheet" href="../../style/style.css">
-    <script src="../../scripts/script.js" async></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('../admin/home.html')">&#8962;</span>
-        <span class="header-title">Requests</span>
-        <div class="search-container" style="width: 500px;">
-            <span style="font-weight: bold;">Search...</span>
-            <input type="text">
+        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
+        <div class="search-container">
+            <input type="text" placeholder="Search" value="Science">
             <span>&#128269;</span>
         </div>
         <span class="icon">&#128100;</span>
@@ -40,10 +36,7 @@
                 <p>Author: Sanjeevan</p>
                 <p>2026, Type</p>
             </div>
-            <div style="display: flex; gap: 8px; align-items: center;">
-                <button class="btn btn-red">X</button>
-                <div class="status-arrow st-review">Review</div>
-            </div>
+            <div class="icon-bookmark" title="Save this item"></div>
         </div>
 
         <div class="list-item">
@@ -54,11 +47,10 @@
                 <p>Author: Harvind</p>
                 <p>2026, Type</p>
             </div>
-            <div style="display: flex; gap: 8px; align-items: center;">
-                <button class="btn btn-red">X</button>
-                <div class="status-arrow st-review">Review</div>
-            </div>
+            <div class="icon-bookmark" title="Save this item"></div>
         </div>
     </div>
+    
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
