--- a/src/templates/lecturerStudent/lecturerDashboard.html
+++ b/src/templates/lecturerStudent/lecturerDashboard.html
@@ -7,7 +7,7 @@
     <header>
         <span class="icon" onclick="toggleMenu()">&#9776;</span>
         <span class="header-title">Analytics</span>
-        <a href="../lecturerStudent/lecturerDashboard.html" class="icon">&#128100;</a>
+        <a href="{{ url_for('lecturer_dashboard') }}" class="icon">&#128100;</a>
         
     </header>
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding: 20px;">
@@ -43,7 +43,7 @@
     </div>
    
     
-    <script src="../../scripts/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
 
