--- a/src/templates/mainScreens/home.html
+++ b/src/templates/mainScreens/home.html
@@ -6,8 +6,7 @@
 <body>
     <header>
         <span class="icon" onclick="toggleMenu()">&#9776;</span>
-        <a href="{{ url_for('login') }}" class="icon">&#128100;</a>
-        <!-- <a href="../mainScreens/login.html" class="icon">&#128100;</a> -->
+        <a href="../mainScreens/login.html" class="icon">&#128100;</a>
     </header>
     <div class="login-container" style="justify-content: flex-start; padding-top: 100px;">
         <h1>Publications</h1>
@@ -17,10 +16,8 @@
             <span>&#128269;</span>
         </div>
         <br>
-        <button class="btn btn-blue" data-url="{{ url_for('search_results') }}" id="searchBtn">Search</button>
-        <!-- <button class="btn btn-blue" onclick="navigateTo('../mainScreens/publicationresults.html')">Search</button> -->
+        <button class="btn btn-blue" onclick="navigateTo('../mainScreens/publicationresults.html')">Search</button>
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-     <!-- <script src="../../scripts/script.js"></script> -->
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
