--- a/src/templates/lecturerStudent/lecturerhome.html
+++ b/src/templates/lecturerStudent/lecturerhome.html
@@ -12,7 +12,7 @@
     <div class="login-container" style="justify-content: flex-start; padding-top: 100px;">
         <h1>Publications</h1>
         <div class="search-container" style="width: 500px;">
-            <span style="font-weight: bold;">Search...</span>
+            <span style="font-weight: bold;">Search LECTURERRRRR...</span>
             <input type="text">
             <span>&#128269;</span>
         </div>
