--- a/src/templates/lecturerStudent/lecturerhome.html
+++ b/src/templates/lecturerStudent/lecturerhome.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <span class="icon" onclick="toggleMenu()">&#9776;</span>
-        <a href="{{ url_for('login') }}" class="icon">&#128100;</a>
+        <a href="{{ url_for('lecturer_dashboard') }}" class="icon">&#128100;</a>
         <!-- <a href="../mainScreens/login.html" class="icon">&#128100;</a> -->
     </header>
     <div class="login-container" style="justify-content: flex-start; padding-top: 100px;">
