--- a/src/templates/coordinator/coordinator_dashboard.html
+++ b/src/templates/coordinator/coordinator_dashboard.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
+        <a href="{{ url_for('coordinator_home') }}" class="icon" style="text-decoration:none; color:inherit;">
+            &#8962;
+        </a>
         <span class="header-title">Analytics</span>
         <div style="display: flex; gap: 10px;">
             <button class="btn" style="background: #7a0f5a;">Faculty</button>
@@ -40,6 +42,6 @@
             </div>
         </div>
     </div>
-    <script src="../../scripts/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
