--- a/src/templates/admin/admin_home.html
+++ b/src/templates/admin/admin_home.html
@@ -3,7 +3,7 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='adminScript.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
     <header>
